# zk-implementations

./: README.md
fiat-shamir-transformation/: Cargo.toml
fiat-shamir-transformation/src/: lib.rs
gkr-implementation/: Cargo.toml
gkr-implementation/src/: gkr_sumcheck.rs  main.rs
ml-kzg/: Cargo.toml
ml-kzg/src/: lib.rs  trusted_setup.rs
multilinear-polynomial/: Cargo.toml
multilinear-polynomial/benches/: benchmark.rs
multilinear-polynomial/src/: boolean_hypercube.rs  lib.rs  product_poly.rs
multivariate-polynomial/: Cargo.toml
polynomial-functions/: Cargo.toml  README.md
polynomial-functions/src/: lib.rs  main.rs
shamir-secret-sharing-threshhold-scheme/: Cargo.toml  README.md
shamir-secret-sharing-threshhold-scheme/src/: lib.rs
sumcheck/: Cargo.toml
sumcheck/src/: gkr_sumcheck.rs  lib.rs
