[package]
name = "multilinear-polynomial"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"

sha3 = "0.10.8"
fiat_shamir = { git = "https://github.com/BiliqisO/zk-implementations.git", branch = "main", package = "fiat-shamir-transformation" }

bincode = "1.3"
serde = { version = "1", features = ["derive"] }





[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "benchmark"
harness = false
