[package]
name = "zkpolynomial"
version = "0.1.0"
edition = "2021"
description = "A Rust library for polynomial operations, including addition, multiplication, evaluation, and Lagrange interpolation for univariate polynomials."
license = "MIT"
repository = "https://github.com/BiliqisO/zk-implementations/tree/main/polynomial-functions"
keywords = ["interpolation", "lagrange-interpolate", "univariate-poly", "poly-addition","poly-evaluation"] 
exclude = ["target/*"]

[lib]
name = "polynomials"
path = "src/lib.rs" 


