[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
sha3 = "0.10.8"
fiat_shamir = { git = "https://github.com/BiliqisO/zk-implementations.git", branch = "main", package = "fiat-shamir-transformation" }
evaluation_form_poly = { git = "https://github.com/BiliqisO/zk-implementations.git", branch = "productpoly", package = "multilinear-polynomial" }

